<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="10dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:alpha=".75"
        android:src="@drawable/logo2"
        android:transitionName="logo_name"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_student_welcome_back"
        android:transitionName="logo_text"
        android:textSize="40sp"
        android:fontFamily="@font/bungee"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/sign_to_continue"
        android:transitionName="logo_desc"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:transitionName="username_tran"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="password_tran"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GO"
            android:transitionName="button_tran"
            android:backgroundTint="#000"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:text="New User? SIGN UP"
            android:textColor="#000000"
            android:elevation="0dp"
            android:fontFamily="@font/antic"
            android:transitionName="login_signup_tran"
            android:layout_margin="5dp"/>


    </LinearLayout>


</LinearLayout>